Initial GitHub pages site with Jekyll

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>我目前还 想不到啥<br>
     非得写的 先就这样？</p></blockquote>
 
-    <p>Hiiii，我是<strong>小霍(Cassiel)</strong>，一只啥也不会的master of Data Science 学生，有合适的实习/工作机会还请老板们照顾！。</p>
+    <p>Hiiii，我是<strong>小霍(Cassiel)</strong>，一位正在苦学技术的master of Data Science 学生，有合适的实习/工作机会还请老板们多多照顾！</p>
 
     <p>下面的这些都是原bo写的！跟我没啥关系，我还不知道要改啥！</p>
 
