--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "Hey, this is BY."
+title: "About me"
+description: "Hey, this is Xingchen."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
