--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@ header-img: "img/post-bg-rwd.jpg"
     </ul>
 </div>
 
-<-- English Version -->
+<!-- English Version -->
 <-- <div class="en post-container">
     <blockquote><p>Yet another iOS Developer. <br>
     Yet another Life-long Student.</p></blockquote>
