--- a/about.html
+++ b/about.html
@@ -22,7 +22,11 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>各位，欢迎联系我！实习🐛</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉Sam</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 
+        <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页
+        <a href="https://github.com/tiger7789">👉GitHub·Sam
+        
+        </a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
