--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@ header-img: "img/post-bg-rwd.jpg"
 
 <!-- English Version -->
 <div class="en post-container">
-    <blockquote><p>Yet another iOS Developer. <br>
+    <blockquote><p>Yet another Tech enthusiast. <br>
     Yet another Life-long Student.</p></blockquote>
 
     <p>Hi, I am <strong>Xingchen (Sam) Luo</strong>，you can call me <strong>Sam</strong>. 
