--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About me"
 description: "Hey, this is Xingchen."
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/aboutmebg.jpg"
 ---
 
 <!-- Language Selector -->
