--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@ header-img: "img/aboutmebg.jpg"
     <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/tiger7789">Github·Sam</a>.</p>
     
     <p>I am a sports enthusiast, and enjoy playing soccer, keeping fit through running and boxing, and also playing badminton.</p>
-
+    <p>I am currently seeking internship opportunities in my field of study to gain hands-on experience and further develop my skills.</p>
     <h5>Talks</h5>
 
     <ul>
