--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ header-img: "img/aboutmebg.jpg"
 
 <!-- Language Selector -->
 <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="1" selected> 中文 Chinese </option> click to switch!
+    <option value="1" selected> 中文 Chinese </option> 
     <option value="0"> 英文 English </option>
 </select> 
 
@@ -15,16 +15,16 @@ header-img: "img/aboutmebg.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
+    <blockquote><p> click above to switch language <br> 冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>星辰(Sam)</strong>，一只学生狗，在麦吉尔学习Finance，并对Business Analyst感兴趣。</p>
+    <p>Hey，我是<strong>星辰(Orion)</strong>，一只学生狗，正在麦吉尔的Master of Management in Analytics学习，本科在麦吉尔学习Finance，并对data scientist感兴趣。</p>
 
     <p>各位，欢迎联系我！实习🐛</p>
 
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 
         <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页
-        <a href="https://github.com/tiger7789">👉GitHub·Sam
+        <a href="https://github.com/tiger7789">👉GitHub·Orion
         
         </a>。如果有什么问题，欢迎提出探讨~</p>
 
@@ -45,10 +45,10 @@ header-img: "img/aboutmebg.jpg"
     <blockquote><p>Yet another Tech enthusiast. <br>
     Yet another Life-long Student.</p></blockquote>
 
-    <p>Hi, I am <strong>Xingchen (Sam) Luo</strong>，you can call me <strong>Sam</strong>. 
-        A student at McGill University, studying Finance, is interested in exploring the field of Business Analysis and technology.</p>
+    <p>Hi, I am <strong>Xingchen (Orion) Luo</strong>，you can call me <strong>Orion</strong>. 
+        A student at McGill University, currently studying Master of Management Analytics. graduated from Bcom in Finance @ McGill, is interested in exploring the data scientist and technology field.</p>
 
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/tiger7789">Github·Sam</a>.</p>
+    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/tiger7789">Github·Orion</a>.</p>
     
     <p>I am a sports enthusiast, and enjoy playing soccer, keeping fit through running and boxing, and also playing badminton.</p>
     <p>I am currently seeking <srong> internship </srong>opportunities in my field of study to gain hands-on experience and further develop my skills.</p>
@@ -58,7 +58,7 @@ header-img: "img/aboutmebg.jpg"
     <li><a href="https://github.com">GitHub</a></li>
     <li><a href="http://jekyll.com.cn/">jekyll</a></li>
     <li><a href="https://pages.github.com/">GitHub Pages</a></li>
-    <li><a href="https://tiger7789.github.io">Sam</a></li>
+    <li><a href="https://tiger7789.github.io">Orion</a></li>
     </ul>
 </div> 
 
