--- a/about.html
+++ b/about.html
@@ -56,6 +56,7 @@ header-img: "img/aboutmebg.jpg"
 
     <ul>
     <li><a href="https://github.com">GitHub</a></li>
+    <li><a href="https://www.linkedin.com/in/xingchen-luo-1216lxc">Linkedin</a></li>  
     <li><a href="http://jekyll.com.cn/">jekyll</a></li>
     <li><a href="https://pages.github.com/">GitHub Pages</a></li>
     <li><a href="https://tiger7789.github.io">Orion</a></li>
