--- a/about.html
+++ b/about.html
@@ -47,11 +47,11 @@ header-img: "img/aboutmebg.jpg"
     Yet another Life-long Student.</p></blockquote>
 
     <p>Hi, I am <strong>Xingchen (Orion) Luo</strong>，you can call me <strong>Orion</strong>. 
-        A student at McGill University, currently studying Master of Management Analytics. graduated from Bcom in Finance @ McGill, is interested in exploring the data scientist and technology field.</p>
+        A student at McGill University, currently studying <strong>Master of Management Analytics</strong>. Graduated from Bcom in Finance @ McGill, is interested in exploring the data scientist and technology field.</p>
 
     <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/tiger7789">Github·Orion</a>.</p>
     
-    <p>I am a sports enthusiast, and enjoy playing soccer, keeping fit through running and boxing, and also playing badminton.</p>
+    <p>I am a sports enthusiast and enjoy playing soccer, keeping fit through running and boxing, and also playing badminton.</p>
     <p>I am currently seeking <srong> internship </srong>opportunities in my field of study to gain hands-on experience and further develop my skills.</p>
     <h5>Talks</h5>
 
