--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@ header-img: "img/aboutmebg.jpg"
 
 <!-- Language Selector -->
 <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0" selected> 中文 Chinese </option> 
-    <option value="1"> 英文 English </option>
+    <option value="1" selected> 英文 English </option>
+    <option value="0"> 中文 Chinese </option>
 </select> 
 
 <!-- Chinese Version -->
@@ -77,14 +77,14 @@ header-img: "img/aboutmebg.jpg"
     function _render(){
         var _hash = window.location.hash;
         // en
-        if(_hash == "#en"){
-            $select.selectedIndex = 1;
-            $en.style.display = "block";
-            $zh.style.display = "none";
+        if(_hash === "#zh"){
+            $select.selectedIndex = 0;
+            $zh.style.display = "block";
+            $en.style.display = "none";
         // zh by default
         }else{
             // not trigger onChange, otherwise cause a loop call.
-            $select.selectedIndex = 0;
+            $select.selectedIndex = 1;
             $zh.style.display = "block";
             $en.style.display = "none";
         }
