--- a/about.html
+++ b/about.html
@@ -81,13 +81,14 @@ header-img: "img/aboutmebg.jpg"
             $select.selectedIndex = 1;
             $zh.style.display = "block";
             $en.style.display = "none";
-        // zh by default
+        // en by default
         }else{
-            // not trigger onChange, otherwise cause a loop call.
+        // not trigger onChange, otherwise cause a loop call.
             $select.selectedIndex = 0;
-            $zh.style.display = "block";
-            $en.style.display = "none";
+            $zh.style.display = "none";
+            $en.style.display = "block";
         }
+
     }
 
     // handle select change
