--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@ header-img: "img/aboutmebg.jpg"
 
     <p>This is my personal blog, through making Github Pages and Jekyll. My GitHub 👉 <a href="http://github.com/tiger7789">Github·Orion</a>.</p>
 
-    <p>I am a sports enthusiast and enjoy playing soccer, keeping fit through running and boxing, and also playing badminton.</p>
+    <p>I am a sports enthusiast and enjoy playing soccer, keeping fit through running, snowboarding, gym, swimming, and hiking, and also playing badminton.</p>
     <p>I am currently seeking <strong>internship</strong> opportunities in my field of study to gain hands-on experience and further develop my skills.</p>
 
     <h5>Talks</h5>
